# Cpp-UCL-Graudate-Programming-Course

./: 0_basics.aux  0_basics.nav  0_basics.out  1_control_structure.aux  1_control_structure.toc  2_more_data_types.aux  2_more_data_types.nav  2_more_data_types.out  2_more_data_types.tex  2_more_data_types.toc  2_more_data_types.vrb  3_oop.tex  4_io.tex  5_advanced_oop.tex
code/: CMakeLists.txt
code/0_basics/lectures/: CMakeLists.txt  force_calc.cpp  force_calc_const.cpp  hello_world.cpp  rect_info.cpp
code/0_basics/solutions/: CMakeLists.txt  binary_string.cpp  data_analysis.cpp  electrostatic_force.cpp
code/1_control_structure/exercises/: CMakeLists.txt  fractal_forest.cpp  lottery_odds.cpp  pi.plt  pong.cpp  pong.h
code/1_control_structure/lectures/: CMakeLists.txt  dispense_drink.cpp  factorial.cpp  grav_force.cpp  tea_father.cpp
code/1_control_structure/solutions/: CMakeLists.txt  fibonacci.cpp  fractal_forest.cpp  fractal_forest.plt  lottery_odds.cpp  pi.cpp  pong.cpp  pong.h
code/2_more_data_types/exercises/: CMakeLists.txt  game_of_life.cpp  lottery.cpp  noughts_crosses.cpp
code/2_more_data_types/lectures/: CMakeLists.txt  centre_of_mass.cpp  pointers_example.cpp  references_example.cpp
code/2_more_data_types/solutions/: CMakeLists.txt  game_of_life.cpp  lottery.cpp  noughts_crosses.cpp
code/3_oop/exercises/: CMakeLists.txt  bouncy_balls.cpp
code/3_oop/lectures/: CMakeLists.txt  simple_vector2.cpp
code/3_oop/solutions/: CMakeLists.txt  bouncy_balls.cpp  bouncy_balls.plt  planets.cpp  vector2.cpp
code/4_io/exercises/: CMakeLists.txt  gol_with_io.cpp
code/4_io/lectures/: CMakeLists.txt  caterpillar.txt  parse_numbers.cpp  simple_input.cpp  simple_output.cpp  world.plt
code/4_io/solutions/: CMakeLists.txt  gol_with_io.cpp  heathrow.cpp
code/5_advanced_oop/exercises/: CMakeLists.txt  logger.cpp
code/5_advanced_oop/exercises/snake/: Draw.cpp  Draw.h  Game.cpp  Game.h  GameObjects.cpp  GameObjects.h  World.cpp  WorldObject.h  snake_game.cpp
code/5_advanced_oop/lectures/: CMakeLists.txt  friend_function.cpp  inheritance.cpp  inheritance2.cpp  pure_virtual_functions.cpp  virtual_functions.cpp
code/5_advanced_oop/solutions/: CMakeLists.txt  logger.cpp
code/5_advanced_oop/solutions/snake/: GameObjects.cpp  GameObjects.h  World.h  snake.cpp  snake.h  (+1 more)
(+39 files in other folders)
