
cmake_minimum_required(VERSION 2.6)

project("ScientificCpp")

set_property(TARGET PROPERTY PROJECT_LABEL "Scientific Cpp")

#add_subdirectory(0_basics/exercises)
add_subdirectory(0_basics/lectures)
add_subdirectory(0_basics/solutions)

add_subdirectory(1_control_structure/exercises)
add_subdirectory(1_control_structure/lectures)
add_subdirectory(1_control_structure/solutions)

add_subdirectory(2_more_data_types/exercises)
add_subdirectory(2_more_data_types/lectures)
add_subdirectory(2_more_data_types/solutions)

add_subdirectory(3_oop/exercises)
add_subdirectory(3_oop/lectures)
add_subdirectory(3_oop/solutions)

add_subdirectory(4_io/exercises)
add_subdirectory(4_io/lectures)
add_subdirectory(4_io/solutions)

add_subdirectory(5_advanced_oop/exercises)
add_subdirectory(5_advanced_oop/lectures)
add_subdirectory(5_advanced_oop/solutions)

SET(CPACK_SOURCE_GENERATOR "TGZ")
 
INCLUDE(CPack)
